<resources>

    <string name="app_name">Maxi 80</string>
    <string name="app_description">La radio de toute une génération</string>
    <string name="app_url">https://audio1.maxi80.com</string>
    <string name="website_url">https://maxi80.com</string>
    <string name="donation_url">https://www.maxi80.com/paypal.htm</string>


    <string name="cover">No cover to show</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="share">Share</string>
    <string name="info">Info</string>

    <string name="title_activity_about">About...</string>
    <string name="website">Website</string>
    <string name="donate">Support us</string>
    <string name="copyright">%s Android\n%s (%s)</string>
    <string name="thanks">Based on ExoPlayer ICY extensions from saschpe@</string>

    <string name="share_to">info@maxi80.com</string>
    <string name="share_subject">Maxi80 on Android</string>
    <string name="share_text">I am listening to %s by %s on Maxi80.  Check it out at https://maxi80.com.</string>
    <string name="share_title">Send message</string>
    <string name="error_no_network">We can not connect to Maxi80.  Check that network is correctly activated and try again.</string>

</resources>
