<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/cover"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/cover"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/nocover_400x400" />

        <TextView
            android:id="@+id/artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_name"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cover" />

        <TextView
            android:id="@+id/track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_description"
            android:text="@string/app_description"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artist" />

        <!--<android.support.design.widget.FloatingActionButton-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@+id/volumeBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/track"
            app:srcCompat="@drawable/ic_play_arrow_black_24dp" />

        <ImageButton
            android:id="@+id/volumeDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="2dp"
            android:clickable="true"
            android:contentDescription="@string/volume_down"
            android:tint="@android:color/darker_gray"
            app:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_volume_down_black_24dp" />

        <ImageButton
            android:id="@+id/volumeUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contentDescription="@string/volume_up"
            android:tint="@android:color/darker_gray"
            app:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_volume_up_black_24dp" />

        <SeekBar
            android:id="@+id/volumeBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/logo"
            app:layout_constraintEnd_toStartOf="@+id/volumeUp"
            app:layout_constraintStart_toEndOf="@+id/volumeDown" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:scaleX="1.4"
            android:scaleY="1.4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/logo_small" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share"
            android:onClick="showShare"
            android:tint="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/info"
            app:srcCompat="@drawable/ic_share_black_24dp" />

        <ImageButton
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/info"
            android:onClick="showAbout"
            android:tint="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_info_outline_black_24dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
